[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.2", features = ["json","stream"] }
futures = "0.3.21"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
bytes = "1.6.0"
tokio-util = "0.7.10"
