[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
futures = "0.3.21"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
async-stream = "0.3.2"
tokio = { version = "1.17.0", features = ["full"] }
actix-rt = "2.9.0"
